Внёс всё, кроме анимации и стилизации range

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,9 @@ html {
   box-sizing: inherit;
 }
 
-* {
+/* * {
   outline: 1px dashed lightgrey;
-}
+} */
 
 body {
   font-family: "PT Sans", "Arial", sans-serif;
@@ -20,10 +20,17 @@ body {
   background-color: #ffffff;
 }
 
-.container-width {
+.container-shadow {
+  width: 1280px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
+}
+
+.container {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  background-color: #ffffff;
 }
 
 .visually-hidden:not(:focus):not(:active) {
@@ -50,14 +57,16 @@ a {
 
 .main-navigation {
   position: relative;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .site-navigation {
   display: flex;
-  justify-content: space-between;
   width: 1200px;
   list-style: none;
   margin: 0;
+  font-size: 14px;
   line-height: 26px;
   font-weight: bold;
   color: #000000;
@@ -71,16 +80,32 @@ a {
   position: absolute;
   top: 0;
   left: 50%;
-  margin-left: -60px;
+  margin-left: -70px;
 }
 
-.site-navigation li {
-  width: 240px;
-  text-align: center;
+.site-navigation li:first-child {
+  padding-left: 72px;
+  text-align: left;
 }
 
 .site-navigation li:nth-child(2) {
   margin-right: 240px;
+  padding-left: 72px;
+  text-align: left;
+}
+
+.site-navigation li:nth-child(3) {
+  padding-right: 72px;
+  text-align: right;
+}
+
+.site-navigation li:last-child {
+  padding-right: 72px;
+  text-align: right;
+}
+
+.site-navigation li {
+  width: 240px;
 }
 
 .site-navigation a {
@@ -96,11 +121,18 @@ a {
   color: rgba(0, 0, 0, 0.3);
 }
 
+a.site-navigation-current {
+  pointer-events: none;
+  color: #766357;
+}
+
 .welcome-sedona {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
   padding-top: 510px;
   background-color: #ffffff;
   background-image:
@@ -108,14 +140,14 @@ a {
     url("../img/intro-mask.svg"),
     url("../img/background-photo.jpg");
   background-position:
-    center 100px,
-    0 453px,
-    left -55px;
+    center 77px,
+    0 452px,
+    left -82px;
   background-repeat: no-repeat;
   background-size:
-    460px 353px,
-    1200px 59px,
-    1200px 775px;
+    459px 353px,
+    1200px 60px,
+    1200px 800px;
 }
 
 .container-white {
@@ -124,15 +156,16 @@ a {
   justify-content: center;
   align-items: center;
   padding-top: 60px;
-  padding-bottom: 55px;
+  padding-bottom: 53px;
   width: 1200px;
   background-color: #ffffff;
 }
 
 .welcome-sedona h2 {
-  width: 450px;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
+  padding-left: 360px;
+  padding-right: 360px;
   text-align: center;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
@@ -142,9 +175,10 @@ a {
 }
 
 .welcome-sedona p {
-  width: 490px;
   margin: 0;
   text-align: center;
+  padding-left: 355px;
+  padding-right: 355px;
   background-color: #ffffff;
 }
 
@@ -161,27 +195,34 @@ a {
 .about-bridge {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 400px;
-  margin: 0 auto;
+  margin: 0;
+  margin-top: 45px;
+  margin-bottom: 55px;
   padding: 0;
   text-align: center;
 }
 
 .feature-true h3 {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+  padding-left: 130px;
+  padding-right: 130px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight: 700;
 }
 
 .answer {
+  margin: 0;
   padding-left: 60px;
   padding-right: 60px;
+  line-height: 21px;
 }
 
-/* Что-то я не знаю как обрезать без высоты  */
 .image-city {
   display: flex;
   align-items: center;
@@ -190,13 +231,21 @@ a {
   overflow: hidden;
 }
 
+.feature-number {
+  margin: 0;
+  margin-bottom: 18px;
+  padding: 0;
+  padding-left: 170px;
+  padding-right: 170px;
+}
+
 .features-list {
   display: flex;
   flex-direction: row;
   position: relative;
   margin: 0;
+  margin-bottom: 85px;
   padding: 0;
-  padding-top: 160px;
   text-align: center;
   list-style: none;
 }
@@ -206,10 +255,16 @@ a {
   flex-direction: column;
   align-items: center;
   width: 400px;
-  padding-bottom: 85px;
+  padding: 0;
+  margin: 0;
 }
 
 .features-list h3 {
+  margin: 0;
+  margin-bottom: 20px;
+  padding-top: 160px;
+  padding-left: 140px;
+  padding-right: 140px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
   line-height: 26px;
@@ -253,23 +308,38 @@ a {
 }
 
 .features p {
-  width: 300px;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  padding-left: 50px;
+  padding-right: 50px;
+  line-height: 21px;
 }
 
 .feature-bridge {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
+  padding: 0;
+  margin: 0;
   color: #ffffff;
   background-color: #81b3d2;
 }
 
 .feature-bridge h3 {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+  padding-left: 124px;
+  padding-right: 124px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight: 700;
+}
+
+.about-bridge .answer {
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
 .image-bridge {
@@ -281,12 +351,14 @@ a {
 }
 
 .features-life {
+  padding: 0;
+  margin: 0;
   background-color: #eeeeee;
 }
 
 .features-life .features-list {
   margin: 0;
-  padding-top: 0;
+  padding: 0;
 }
 
 .features-life li {
@@ -294,18 +366,28 @@ a {
   flex-direction: column;
   align-items: center;
   width: 400px;
-  padding-top: 50px;
-  padding-bottom: 75px;
+  padding-top: 45px;
+  padding-bottom: 60px;
 }
 
 .features-life h3 {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
   padding-left: 130px;
   padding-right: 130px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 21px;
+  line-height: 21px;
+  font-weight: 700;
 }
 
 .features-life p {
+  margin: 0;
+  padding: 0;
   padding-left: 65px;
   padding-right: 65px;
+  line-height: 21px;
 }
 
 .features-life .narrow {
@@ -317,12 +399,13 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
   text-align: center;
 }
 
 .search h3 {
-  margin-top: 55px;
-  margin-bottom: 35px;
+  margin-top: 50px;
+  margin-bottom: 25px;
   text-align: center;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 30px;
@@ -331,8 +414,13 @@ a {
 }
 
 .search p {
-  margin-bottom: 50px;
+  padding: 0;
+  padding-left: 380px;
+  padding-right: 380px;
+  margin: 0;
+  margin-bottom: 45px;
   text-align: center;
+  line-height: 24px;
 }
 
 .button-call-form {
@@ -360,13 +448,28 @@ a {
   background-color: #503e33;
 }
 
+.container-form {
+  position: absolute;
+  z-index: 1;
+  top: 290px;
+  width: 570px;
+  margin: 0;
+  background-color: #ffffff;
+}
+
 .search-hotel-form {
   display: flex;
   flex-direction: column;
-  width: 570px;
+  width: 460px;
+  margin: 55px;
 }
 
 .entry-field {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 460px;
+  margin-bottom: 28px;
   text-align: left;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
@@ -375,13 +478,88 @@ a {
   color: #000000;
 }
 
-.half-entry-field {
+.entry-field label {
+  padding-left: 2px;
+  width: 110px;
+}
+
+.arrival-form {
+  display: flex;
+  position: relative;
+}
+
+.out-form {
+  display: flex;
+  position: relative;
+}
+
+.date {
+  width: 345px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 40px;
+  margin: 0;
+}
+
+.button-call-calendar {
+  position: absolute;
+  top: 8px;
+  right: 5px;
+}
+
+.human-form {
+  display: flex;
+  align-items: center;
+  width: 460px;
+  margin-bottom: 55px;
+}
+
+.adults-entry-field,
+.children-entry-field {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 230px;
   text-align: left;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
   color: #000000;
+}
+
+.children-entry-field {
+  width: 180px;
+  margin-left: 50px;
+}
+
+.adults-form,
+.children-form {
+  display: flex;
+  position: relative;
+}
+
+.number-people {
+  width: 114px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 38px;
+  padding-right: 38px;
+}
+
+.button-number-minus {
+  position: absolute;
+  top: 11px;
+  left: 0;
+  width: 38px;
+}
+
+.button-number-plus {
+  position: absolute;
+  top: 11px;
+  right: 0;
+  width: 38px;
 }
 
 input[type=date]:hover,
@@ -411,7 +589,7 @@ input[type=number]:focus {
 .button-number-minus,
 .button-number-plus,
 .button-call-calendar {
-  background-color: #f2f2f2;
+  background-color: transparent;
   border: none;
   fill: #a9a9a9;
 }
@@ -433,8 +611,8 @@ input[type=number]:focus {
 
 .button-search {
   text-align: center;
-  padding-top: 11px;
-  padding-bottom: 11px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
   line-height: 26px;
@@ -456,14 +634,15 @@ input[type=number]:focus {
 }
 
 .map {
-  position: relative;
-  top: 120px;
+  margin-bottom: -120px;
 }
 
 .main-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 1200px;
+  margin: 0 auto;
   background-color: rgb(255, 255, 255);
   opacity: 0.9;
 }
@@ -474,7 +653,7 @@ input[type=number]:focus {
 }
 
 .tag a {
-  padding-left: 60px;
+  padding-left: 63px;
   padding-right: 45px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
@@ -533,8 +712,8 @@ input[type=number]:focus {
 
 .developer-button {
   position: absolute;
-  top: -5px;
-  left: 100px;
+  top: -7px;
+  left: 96px;
 }
 
 .developer-button:hover path,
@@ -547,8 +726,10 @@ input[type=number]:focus {
 }
 
 .filters {
-  display: flex;
-  color: #ffffff;
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-top: 28px;
+  padding-bottom: 30px;
   background-image: url("../img/filter-background.jpg");
   background-position: left center;
   background-repeat: no-repeat;
@@ -557,54 +738,150 @@ input[type=number]:focus {
 
 .detail-search-form {
   display: flex;
+  justify-content: space-between;
+  width: 1060px;
+}
+
+.detail-search-form fieldset {
+  border: none;
+}
+
+.container-choice-hotel {
+  display: flex;
+  width: 530px;
+}
+
+.detail-search-form legend {
+  padding: 0;
+  padding-left: 2px;
+  margin: 0;
+  margin-bottom: 25px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 700;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.detail-search-form label {
+  padding-left: 42px;
+  margin-bottom: 25px;
+}
+
+.detail-search-form label:last-child {
+  margin-bottom: 0;
 }
 
 .infrastructure {
   display: flex;
-  width: 240px;
+  min-width: 255px;
+  margin: 0;
+  padding: 0;
   flex-direction: column;
-  margin-left: 70px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  color: #ffffff;
+  text-transform: uppercase;
 }
 
 .type-house {
   display: flex;
-  width: 290px;
+  min-width: 288px;
   flex-direction: column;
-  margin-right: 200px;
+  margin: 0;
+  padding: 0;
+  margin-right: 210px;
+  width: 240px;
+  flex-direction: column;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  color: #ffffff;
+  text-transform: uppercase;
 }
 
 .container-price {
   display: flex;
   flex-direction: column;
-  width: 330px;
-  margin-right: 70px;
+  min-width: 322px;
 }
 
 .price {
   display: flex;
-  width: 330px;
-  margin-right: 70px;
+  flex-direction: column;
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
 }
 
-.filters .legend {
-  text-align: left;
+.price legend {
+  padding: 0;
+  padding-left: 2px;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.price-choice {
+  display: flex;
+  width: 320px;
+  position: relative;
+  margin-bottom: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
   font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 21px;
-  font-weight: 700;
+  font-weight: 400;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.price-choice span {
+  width: 157px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+.price-choice::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 22px;
+  top: 50%;
+  left: 50%;
+  background: #ffffff;
+  transform: translate(-50%, -50%);
+}
+
+.range-price {
+  display: flex;
+  width: 320px;
+}
+
+.range-price input {
+  width: 160px;
 }
 
 .button-detail-search {
+  width: 137px;
+  margin-left: 85px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   text-align: center;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  color: #333333;
   text-transform: uppercase;
   color: #ffffff;
   background: transparent;
-  border: 1px solid #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
 }
 
 .button-detail-search:hover,
@@ -620,8 +897,8 @@ input[type=number]:focus {
   margin: 0;
   margin-left: 70px;
   margin-right: 70px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 9px;
+  padding-bottom: 9px;
   text-align: left;
 }
 
@@ -634,8 +911,9 @@ input[type=number]:focus {
 }
 
 .found-result h3 {
-  padding-left: 3px;
-  width: 160px;
+  width: 165px;
+  padding: 0;
+  padding-left: 2px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
   line-height: 26px;
@@ -645,6 +923,7 @@ input[type=number]:focus {
 }
 
 .found-result h4 {
+  padding-top: 5px;
   font-size: 12px;
   line-height: 18px;
   font-weight: 400;
@@ -665,6 +944,7 @@ input[type=number]:focus {
 }
 
 .choice-sorting li {
+  padding-top: 5px;
   margin-right: 32px;
 }
 
@@ -691,7 +971,8 @@ input[type=number]:focus {
   border: none;
 }
 
-.sorting-current {
+a.sorting-current {
+  pointer-events: none;
   font-size: 12px;
   line-height: 18px;
   font-weight: 400;
@@ -701,37 +982,35 @@ input[type=number]:focus {
 
 .sorting-icons {
   display: flex;
-  justify-content: space-around;
-  width: 40px;
+  justify-content: space-between;
+  width: 35px;
   margin: 0;
+  margin-top: 3px;
+  margin-right: 3px;
   padding: 0;
 }
 
-.sorting-down path {
-  fill: #cacaca;
-}
-
-.sorting-up path {
+.sorting-icons path {
   fill: #cacaca;
 }
 
 .sorting-up:hover path,
-/* .sorting-down:hover path, */
-.sorting-up:focus path
-
-/* .sorting-down:focus path */
-  {
+.sorting-down:hover path,
+.sorting-up:focus path,
+.sorting-down:focus path {
   fill: #231f20
 }
 
-.sorting-up:active path
-
-/* .sorting-down:active path*/
-  {
+.sorting-up:active path,
+.sorting-down:active path {
   fill: #81b3d2;
 }
 
-.current path {
+.sorting-icons .current {
+  pointer-events: none;
+}
+
+a.current path {
   fill: #81b3d2;
 }
 
@@ -754,7 +1033,6 @@ input[type=number]:focus {
 .card-hotel {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   margin: 0;
   margin-left: 70px;
   margin-right: 70px;
@@ -766,26 +1044,33 @@ input[type=number]:focus {
 .container-hotel {
   display: flex;
   width: 530px;
+  padding: 0;
+  margin: 0;
 }
 
 .catalog-hotel-image {
   width: 135px;
   height: 90px;
   margin: 0;
+  margin-left: 2px;
+  padding: 0;
 }
 
 .discription-hotel {
   display: flex;
   flex-direction: column;
   width: 260px;
-  padding-left: 30px;
+  margin: 0;
+  padding: 0;
+  padding-left: 31px;
   padding-right: 105px;
 }
 
-.discription-hotel h2 {
+.discription-hotel h1 {
   width: 365px;
   margin: 0;
-  margin-bottom: 10px;
+  margin-top: -4px;
+  margin-bottom: 5px;
   padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
@@ -795,39 +1080,41 @@ input[type=number]:focus {
   background-color: #ffffff;
 }
 
-.discription-hotel a:hover,
-.discription-hotel a:focus {
+.hotel-name {
+  padding: 0;
+  margin: 0;
+}
+
+.hotel-name:hover,
+.hotel-name:focus {
   color: #81b3d2;
 }
 
-.discription-hotel a:active {
+.hotel-name:active {
   color: #b2b2b2;
 }
 
-.discription-hotel p {
-  margin: 0;
-  padding: 0;
-}
-
 .price-hotel {
-  width: 365px;
-  margin-bottom: 14px;
-}
-
-.catalog-hotel-type {
-  margin-right: 37px;
+  display: flex;
+  justify-content: space-between;
+  width: 180px;
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0;
 }
 
 .reservation {
   display: flex;
   justify-content: space-between;
-  width: 260px;
-  align-items: center;
+  text-align: center;
+  width: 257px;
   margin: 0;
   padding: 0;
 }
 
 .catalog-hotel-type {
+  padding: 0;
+  margin: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
@@ -837,6 +1124,7 @@ input[type=number]:focus {
 }
 
 .catalog-hotel-price {
+  padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
@@ -847,11 +1135,10 @@ input[type=number]:focus {
 
 .button-more {
   width: 110px;
-  height: 27px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
@@ -862,6 +1149,7 @@ input[type=number]:focus {
 
 .button-more:hover,
 .button-more:focus {
+  color: #ffffff;
   background-color: #669ec0;
 }
 
@@ -872,11 +1160,10 @@ input[type=number]:focus {
 
 .button-order {
   width: 142px;
-  height: 27px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
@@ -887,6 +1174,7 @@ input[type=number]:focus {
 
 .button-order:hover,
 .button-order:focus {
+  color: #ffffff;
   background-color: #604e43;
 }
 
@@ -897,15 +1185,18 @@ input[type=number]:focus {
 
 .rating {
   position: relative;
-  padding-top: 95px;
+  padding-top: 64px;
+  margin: 0;
 }
 
 .rating span {
   width: 110px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin: 0;
+  margin-right: 1px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 13px;
+  padding-right: 13px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
@@ -919,12 +1210,23 @@ input[type=number]:focus {
 
 .hotel-amara::before {
   content: "";
-  width: 72px;
+  width: 90px;
   height: 17px;
   position: absolute;
-  top: -65px;
+  top: -67px;
   right: 0;
-  background-image: url("../img/star.svg");
+  background-image: url("../img/star.svg"),
+    url("../img/star.svg"),
+    url("../img/star.svg"),
+    url("../img/star.svg");
+  background-repeat: no-repeat,
+    no-repeat,
+    no-repeat,
+    no-repeat;
+  background-position: 0 top,
+    24px top,
+    49px top,
+    73px top;
 }
 
 .hotel-quail-inn {
@@ -933,12 +1235,20 @@ input[type=number]:focus {
 
 .hotel-quail-inn::before {
   content: "";
-  width: 54px;
+  width: 66px;
   height: 17px;
   position: absolute;
   top: -65px;
   right: 0;
-  background-image: url("../img/star.svg");
+  background-image: url("../img/star.svg"),
+    url("../img/star.svg"),
+    url("../img/star.svg");
+  background-repeat: no-repeat,
+    no-repeat,
+    no-repeat;
+  background-position: 0 top,
+    24px top,
+    49px top;
 }
 
 .hotel-villas {
@@ -947,10 +1257,15 @@ input[type=number]:focus {
 
 .hotel-villas::before {
   content: "";
-  width: 36px;
+  width: 41px;
   height: 17px;
   position: absolute;
   top: -65px;
   right: 0;
-  background-image: url("../img/star.svg");
+  background-image: url("../img/star.svg"),
+    url("../img/star.svg");
+  background-repeat: no-repeat,
+    no-repeat;
+  background-position: 0 top,
+    24px top;
 }
