--- a/css/style.css
+++ b/css/style.css
@@ -17,23 +17,37 @@ body {
   font-weight: 400;
   color: #333333;
   text-transform: uppercase;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
+  background-image:
+    url("../img/intro-welcome.svg"),
+    url("../img/intro-mask.svg"),
+    url("../img/background-photo.jpg");
+  background-position:
+    center 132px,
+    center 508px,
+    center -27px;
+  background-repeat: no-repeat;
+  background-size:
+    459px 353px,
+    1200px 59px,
+    1200px 800px;
 }
 
 .container-shadow {
-  width: 1280px;
+  width: 1200px;
   margin: 0 auto;
-  background-color: #f2f2f2;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22);
 }
 
 .container {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #ffffff;
 }
 
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -46,13 +60,13 @@ body {
   overflow: hidden;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 a {
   text-decoration: none;
+  cursor: pointer;
+}
+
+.main-header {
+  margin-bottom: 508px;
 }
 
 .main-navigation {
@@ -133,21 +147,8 @@ a.site-navigation-current {
   align-items: center;
   margin: 0;
   padding: 0;
-  padding-top: 510px;
+  padding-top: px;
   background-color: #ffffff;
-  background-image:
-    url("../img/intro-welcome.svg"),
-    url("../img/intro-mask.svg"),
-    url("../img/background-photo.jpg");
-  background-position:
-    center 77px,
-    0 452px,
-    left -82px;
-  background-repeat: no-repeat;
-  background-size:
-    459px 353px,
-    1200px 60px,
-    1200px 800px;
 }
 
 .container-white {
@@ -155,15 +156,14 @@ a.site-navigation-current {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 60px;
-  padding-bottom: 53px;
   width: 1200px;
   background-color: #ffffff;
 }
 
 .welcome-sedona h2 {
   margin: 0;
-  margin-bottom: 25px;
+  margin-top: 60px;
+  margin-bottom: 27px;
   padding-left: 360px;
   padding-right: 360px;
   text-align: center;
@@ -176,9 +176,10 @@ a.site-navigation-current {
 
 .welcome-sedona p {
   margin: 0;
+  margin-bottom: 53px;
   text-align: center;
-  padding-left: 355px;
-  padding-right: 355px;
+  padding-left: 350px;
+  padding-right: 350px;
   background-color: #ffffff;
 }
 
@@ -224,16 +225,18 @@ a.site-navigation-current {
 }
 
 .image-city {
-  display: flex;
-  align-items: center;
   width: 800px;
-  height: 255px;
   overflow: hidden;
+}
+
+.image-city img {
+  margin-top: -80px;
+  margin-bottom: -73px;
 }
 
 .feature-number {
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 20px;
   padding: 0;
   padding-left: 170px;
   padding-right: 170px;
@@ -244,10 +247,11 @@ a.site-navigation-current {
   flex-direction: row;
   position: relative;
   margin: 0;
-  margin-bottom: 85px;
   padding: 0;
+  padding-bottom: 80px;
   text-align: center;
   list-style: none;
+  background-color: #ffffff;
 }
 
 .features li {
@@ -298,7 +302,7 @@ a.site-navigation-current {
 .feature-souvenirs h3::before {
   content: "";
   position: absolute;
-  top: 60px;
+  top: 56px;
   left: 968px;
   width: 64px;
   height: 76px;
@@ -329,25 +333,30 @@ a.site-navigation-current {
   margin: 0;
   margin-bottom: 20px;
   padding: 0;
-  padding-left: 124px;
-  padding-right: 124px;
+  padding-left: 110px;
+  padding-right: 110px;
   font-family: "PT Sans", "Arial", sans-serif;
+  white-space: pre-line;
   font-size: 21px;
   line-height: 21px;
   font-weight: 700;
 }
 
 .about-bridge .answer {
+  margin: 0;
+  padding: 0;
   padding-left: 45px;
   padding-right: 45px;
 }
 
 .image-bridge {
-  display: flex;
-  align-items: center;
   width: 800px;
-  height: 255px;
   overflow: hidden;
+}
+
+.image-bridge img {
+  margin-top: -76px;
+  margin-bottom: -75px;
 }
 
 .features-life {
@@ -372,7 +381,7 @@ a.site-navigation-current {
 
 .features-life h3 {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
   padding: 0;
   padding-left: 130px;
   padding-right: 130px;
@@ -401,6 +410,7 @@ a.site-navigation-current {
   align-items: center;
   position: relative;
   text-align: center;
+  background-color: #ffffff;
 }
 
 .search h3 {
@@ -421,10 +431,11 @@ a.site-navigation-current {
   margin-bottom: 45px;
   text-align: center;
   line-height: 24px;
+  white-space: pre-line;
 }
 
 .button-call-form {
-  width: 570px;
+  width: 568px;
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
@@ -436,6 +447,7 @@ a.site-navigation-current {
   text-transform: uppercase;
   background-color: #766357;
   border: none;
+  cursor: pointer;
 }
 
 .button-call-form:hover,
@@ -449,12 +461,18 @@ a.site-navigation-current {
 }
 
 .container-form {
+  display: none;
   position: absolute;
   z-index: 1;
   top: 290px;
-  width: 570px;
+  width: 568px;
   margin: 0;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
   background-color: #ffffff;
+}
+
+.container-form-show {
+  display: block;
 }
 
 .search-hotel-form {
@@ -469,7 +487,7 @@ a.site-navigation-current {
   justify-content: space-between;
   align-items: center;
   width: 460px;
-  margin-bottom: 28px;
+  margin-bottom: 30px;
   text-align: left;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
@@ -493,26 +511,39 @@ a.site-navigation-current {
   position: relative;
 }
 
+.entry-field input[type=text] {
+  font: inherit;
+  text-transform: uppercase;
+}
+
+input[type="text"]::placeholder {
+  color: #000000;
+}
+
 .date {
-  width: 345px;
+  width: 346px;
   padding-top: 6px;
   padding-bottom: 6px;
   padding-left: 12px;
   padding-right: 40px;
   margin: 0;
+  font: inherit;
+  background-color: #f2f2f2;
+  border: none;
 }
 
 .button-call-calendar {
   position: absolute;
-  top: 8px;
-  right: 5px;
+  top: 7px;
+  right: 4px;
 }
 
 .human-form {
   display: flex;
-  align-items: center;
   width: 460px;
-  margin-bottom: 55px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 54px;
 }
 
 .adults-entry-field,
@@ -520,8 +551,9 @@ a.site-navigation-current {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0;
+  padding: 0;
   width: 230px;
-  text-align: left;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 26px;
@@ -530,60 +562,65 @@ a.site-navigation-current {
 }
 
 .children-entry-field {
-  width: 180px;
-  margin-left: 50px;
+  padding-left: 50px;
 }
 
 .adults-form,
 .children-form {
-  display: flex;
+  margin: 0;
+  padding: 0;
   position: relative;
 }
 
 .number-people {
   width: 114px;
+  margin: 0;
+  margin-right: 2px;
   padding-top: 6px;
   padding-bottom: 6px;
   padding-left: 38px;
   padding-right: 38px;
-}
-
-.button-number-minus {
-  position: absolute;
-  top: 11px;
-  left: 0;
-  width: 38px;
-}
-
-.button-number-plus {
-  position: absolute;
-  top: 11px;
-  right: 0;
-  width: 38px;
-}
-
-input[type=date]:hover,
-input[type=number]:hover {
-  background-color: #ebebeb;
-}
-
-input[type=date]:focus,
-input[type=number]:focus {
-  background-color: #ffffff;
-  border: 2px solid #e5e5e5;
-}
-
-.date {
-  font: inherit;
-  background-color: #f2f2f2;
-  border: none;
-}
-
-.number-people {
   text-align: center;
   font: inherit;
   background-color: #f2f2f2;
   border: none;
+}
+
+.adults-entry-field .button-number-minus {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 38px;
+}
+
+.adults-entry-field .button-number-plus {
+  position: absolute;
+  top: 10px;
+  right: 2px;
+  width: 38px;
+}
+
+.children-entry-field .button-number-minus {
+  position: absolute;
+  top: 10px;
+  left: 2px;
+  width: 38px;
+}
+
+.children-entry-field .button-number-plus {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  width: 38px;
+}
+
+input[type=text]:hover {
+  background-color: #ebebeb;
+}
+
+input[type=text]:focus {
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
 }
 
 .button-number-minus,
@@ -610,6 +647,7 @@ input[type=number]:focus {
 }
 
 .button-search {
+  width: 458px;
   text-align: center;
   padding-top: 16px;
   padding-bottom: 16px;
@@ -633,7 +671,7 @@ input[type=number]:focus {
   background-color: #5496bd;
 }
 
-.map {
+iframe {
   margin-bottom: -120px;
 }
 
@@ -643,18 +681,19 @@ input[type=number]:focus {
   align-items: center;
   width: 1200px;
   margin: 0 auto;
+  padding: 0;
   background-color: rgb(255, 255, 255);
   opacity: 0.9;
 }
 
 .tag {
-  width: 240px;
-  margin-left: 70px;
+  width: 400px;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 .tag a {
-  padding-left: 63px;
-  padding-right: 45px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
   line-height: 26px;
@@ -663,11 +702,19 @@ input[type=number]:focus {
   background-color: #ffffff;
 }
 
+.footer-social {
+  display: flex;
+  justify-content: center;
+  width: 400px;
+  padding: 0;
+  margin: 0;
+}
+
 .footer-social ul {
   display: flex;
+  width: 150px;
   justify-content: space-between;
   align-items: center;
-  width: 150px;
   padding: 0;
   margin-top: 36px;
   margin-bottom: 36px;
@@ -694,14 +741,20 @@ input[type=number]:focus {
 }
 
 .developer {
-  position: relative;
-  width: 240px;
-  margin-right: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 .developer span {
-  padding-left: 15px;
-  padding-right: 150px;
+  margin: 0;
+  padding: 0;
+  padding-right: 9px;
+  padding-left: 2px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 26px;
@@ -711,9 +764,9 @@ input[type=number]:focus {
 }
 
 .developer-button {
-  position: absolute;
-  top: -7px;
-  left: 96px;
+  margin: 0;
+  padding: 0;
+  padding-top: 6px;
 }
 
 .developer-button:hover path,
@@ -725,15 +778,23 @@ input[type=number]:focus {
   fill: rgb(188, 188, 188);
 }
 
+.inner-page {
+  background-image: url("../img/filter-background.jpg");
+  background-position: center -238px;
+  background-repeat: no-repeat;
+  background-size: 1200px 800px;
+}
+
+.inner-page .main-header {
+  margin: 0 auto;
+  padding: 0;
+}
+
 .filters {
   padding-left: 70px;
   padding-right: 70px;
   padding-top: 28px;
-  padding-bottom: 30px;
-  background-image: url("../img/filter-background.jpg");
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: auto;
+  padding-bottom: 31px;
 }
 
 .detail-search-form {
@@ -765,7 +826,7 @@ input[type=number]:focus {
 }
 
 .detail-search-form label {
-  padding-left: 42px;
+  padding-left: 43px;
   margin-bottom: 25px;
 }
 
@@ -804,6 +865,37 @@ input[type=number]:focus {
   text-transform: uppercase;
 }
 
+.detail-search-form label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-input-checkbox+label::before {
+  content: "";
+  position: absolute;
+  left: 2px;
+  top: -1px;
+  width: 23px;
+  height: 23px;
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-size: 23px 23px;
+}
+
+.filter-input-checkbox:checked+label::after {
+  content: "";
+  position: absolute;
+  left: 2px;
+  top: -1px;
+  width: 27px;
+  height: 23px;
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+  background-size: 27px 23px;
+}
+
 .container-price {
   display: flex;
   flex-direction: column;
@@ -814,22 +906,23 @@ input[type=number]:focus {
   display: flex;
   flex-direction: column;
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 24px;
   padding: 0;
 }
 
 .price legend {
   padding: 0;
-  padding-left: 2px;
+  padding-left: 4px;
   margin: 0;
   margin-bottom: 10px;
 }
 
 .price-choice {
   display: flex;
-  width: 320px;
+  width: 318px;
   position: relative;
   margin-bottom: 10px;
+  margin-left: 2px;
   border: 2px solid #ffffff;
   border-radius: 2px;
   font-family: "PT Sans", "Arial", sans-serif;
@@ -841,10 +934,15 @@ input[type=number]:focus {
 }
 
 .price-choice span {
-  width: 157px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  width: 156px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 2px;
   text-align: center;
+}
+
+.price-choice span:last-child {
+  padding-left: 10px;
 }
 
 .price-choice::after {
@@ -869,7 +967,7 @@ input[type=number]:focus {
 
 .button-detail-search {
   width: 137px;
-  margin-left: 85px;
+  margin-left: 88px;
   padding-top: 5px;
   padding-bottom: 5px;
   text-align: center;
@@ -892,14 +990,14 @@ input[type=number]:focus {
 
 .result {
   display: flex;
+  width: 1200px;
   justify-content: space-between;
   align-items: center;
   margin: 0;
-  margin-left: 70px;
-  margin-right: 70px;
   padding-top: 9px;
   padding-bottom: 9px;
   text-align: left;
+  background-color: #ffffff;
 }
 
 .found-result {
@@ -907,6 +1005,7 @@ input[type=number]:focus {
   align-items: center;
   text-align: left;
   margin: 0;
+  margin-left: 70px;
   padding: 0;
 }
 
@@ -986,7 +1085,7 @@ a.sorting-current {
   width: 35px;
   margin: 0;
   margin-top: 3px;
-  margin-right: 3px;
+  margin-right: 72px;
   padding: 0;
 }
 
@@ -1014,6 +1113,10 @@ a.current path {
   fill: #81b3d2;
 }
 
+.catalog {
+  background-color: #ffffff;
+}
+
 .catalog-list {
   display: flex;
   flex-direction: column;
@@ -1022,7 +1125,10 @@ a.current path {
 }
 
 .catalog-hotel {
+  display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
   border-top: 1px solid rgb(229, 229, 229);
 }
 
@@ -1033,17 +1139,19 @@ a.current path {
 .card-hotel {
   display: flex;
   justify-content: space-between;
+  width: 1056px;
   margin: 0;
   margin-left: 70px;
   margin-right: 70px;
   padding: 0;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .container-hotel {
   display: flex;
-  width: 530px;
+  align-items: center;
+  width: 425px;
   padding: 0;
   margin: 0;
 }
@@ -1062,15 +1170,15 @@ a.current path {
   width: 260px;
   margin: 0;
   padding: 0;
-  padding-left: 31px;
+  padding-left: 30px;
   padding-right: 105px;
 }
 
 .discription-hotel h1 {
   width: 365px;
   margin: 0;
-  margin-top: -4px;
-  margin-bottom: 5px;
+  margin-top: -5px;
+  margin-bottom: 6px;
   padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
@@ -1078,11 +1186,6 @@ a.current path {
   font-weight: 700;
   color: #000000;
   background-color: #ffffff;
-}
-
-.hotel-name {
-  padding: 0;
-  margin: 0;
 }
 
 .hotel-name:hover,
@@ -1097,7 +1200,7 @@ a.current path {
 .price-hotel {
   display: flex;
   justify-content: space-between;
-  width: 180px;
+  width: 182px;
   margin: 0;
   margin-bottom: 15px;
   padding: 0;
@@ -1107,7 +1210,7 @@ a.current path {
   display: flex;
   justify-content: space-between;
   text-align: center;
-  width: 257px;
+  width: 258px;
   margin: 0;
   padding: 0;
 }
@@ -1159,7 +1262,7 @@ a.current path {
 }
 
 .button-order {
-  width: 142px;
+  width: 141px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 3px;
@@ -1185,18 +1288,21 @@ a.current path {
 
 .rating {
   position: relative;
+  width: 111px;
+  padding: 0;
   padding-top: 64px;
   margin: 0;
 }
 
 .rating span {
-  width: 110px;
+  display: inline-block;
+  width: 108px;
   margin: 0;
-  margin-right: 1px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  padding-left: 13px;
-  padding-right: 13px;
+  margin-left: 3px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+  text-align: center;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
@@ -1213,7 +1319,7 @@ a.current path {
   width: 90px;
   height: 17px;
   position: absolute;
-  top: -67px;
+  top: -65px;
   right: 0;
   background-image: url("../img/star.svg"),
     url("../img/star.svg"),
@@ -1223,9 +1329,9 @@ a.current path {
     no-repeat,
     no-repeat,
     no-repeat;
-  background-position: 0 top,
-    24px top,
-    49px top,
+  background-position: 2px top,
+    25px top,
+    50px top,
     73px top;
 }
 
@@ -1246,8 +1352,8 @@ a.current path {
   background-repeat: no-repeat,
     no-repeat,
     no-repeat;
-  background-position: 0 top,
-    24px top,
+  background-position: 2px top,
+    26px top,
     49px top;
 }
 
@@ -1266,6 +1372,6 @@ a.current path {
     url("../img/star.svg");
   background-repeat: no-repeat,
     no-repeat;
-  background-position: 0 top,
-    24px top;
+  background-position: 2px top,
+    26px top;
 }
