Исправил баг в IE11
Смещение формы на главной странице.

--- a/css/style.css
+++ b/css/style.css
@@ -190,11 +190,11 @@ a.site-navigation-current {
 }
 
 .welcome-sedona h2 {
+  width: 460px;
   margin: 0;
   margin-top: 60px;
   margin-bottom: 27px;
-  padding-left: 360px;
-  padding-right: 360px;
+  padding: 0;
 
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
@@ -523,6 +523,7 @@ a.site-navigation-current {
   position: absolute;
   z-index: 1;
   top: 289px;
+  left: 316px;
 
   width: 568px;
   margin: 0;
